# keystrokes_biometrics

./: .gitignore  Analiza_Biometrii.ipynb  README.md  docker-compose.yml  run.bat  run.sh
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
frontend/: .dockerignore  Dockerfile  index.html  package.json
frontend/src/: App.jsx
